API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

22-Jun-2002	Daniel Glassey <dglassey@crosswire.org>
	Fixes to allow compiling with gcc3
	add configure support to libVCL and change X!/installmgr
	  to build it automatically
	remove --enable-vcl from core sword

13-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed Module heading bug
	Fixed SWConfig += bug again
	Fixed SWModule size logic when getEntrySize returns -1

06-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Fixed SWConfig += bug
	Added Efata's Indonesian locale

09-Jun-2002     Joachim Ansorg <jansorg@crosswire.org>
       	Added Perl bindings by J. Kaiser to the CVS

06-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Dominique Corbex' fr locale updates
	Added new resultBuffer protected member to SWBasicFilter

04-Apr-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added VerseKey::getOSISRef()
	Added the beginnings of ThMLOSIS filter

02-Apr-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added gsoap bindings and test client.
	Added gbfstrongs parsing of entry attributes

30-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added mod2imp to export a sword module in 'imp'
		format
	Better entry attribute parsing in greekdef* and
		thmlstrongs*

22-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Saulo Rodrigues e Silva's <saulo@jatai.ufg.br>
		locale for pt_BR
	Added entry attributes for Thayer and ThMLStrongs
		(which includes morph also)


* Release 1.5.3 *

22-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Updated make system to display better user output
	Updated 'readme'-type files
	Added make install_config
	
21-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Changed SWMgr::Load ONE MORE TIME (blame Osk) to return
		signed char for mac ppc to work correctly

19-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Changed SWMgr::Load to return char status to be more